[package]
name = "import"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.48"
quote = "1.0"
proc-macro2 = "1.0.24"
serde = {version="1.0.117",features=["derive"]}
serde_json = "1.0.59"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.serde_with]
version = "1.5.1"