[package]
name = "models"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
import = {path = "../import" }
serde = "1.0.117"
serde_json = "1.0.59"
uuid = { version = "0.8", features = ["serde", "v4"] }
erased-serde = "0.3.12"
tempfile = "3.1.0"

[dependencies.serde_with]
version = "1.5.1"
